Save cert to /mnt/shared-certs

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,6 +4,17 @@
     "../docker-compose.yml"
   ],
   "service": "dev-container",
+  "features": {
+    "ghcr.io/devcontainers/features/docker-in-docker:2": {}, // to run minikube in docker
+    "ghcr.io/devcontainers/features/azure-cli:1": {},
+    "ghcr.io/devcontainers/features/kubectl-helm-minikube:1": {
+    },
+    "ghcr.io/audacioustux/devcontainers/k9s:1": {},
+    "ghcr.io/devcontainers/features/github-cli:1": {},
+    "ghcr.io/audacioustux/devcontainers/cilium:1": {
+    }
+
+  },
   "workspaceFolder": "/workspace",
   "forwardPorts": [],
   "customizations": {
